readonly for datepicker

--- a/src/lib/datepicker/datepicker.html
+++ b/src/lib/datepicker/datepicker.html
@@ -22,6 +22,7 @@
            [tabindex]="tabindex"
            [disabled]="disabled"
            autocomplete="off"
+           [readonly]="readonly"
            [value]="_inputValue"
            (change)="$event.stopPropagation()"
            (click)="_handleFocus()"
